[metadata]
name = EzPyZ
version = file: VERSION
url = https://github.com/EGuthrieWasTaken/EzPyZ
description = An easy-to-use statistics package for Python 3.
long_description = file: README.md
keywords = stats
license = GNU GPLv3
license_file = LICENSE
author = Ethan Guthrie
author_email = guthrieec@cofc.edu
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires = file: requirements.txt
tests_require = file: build_requirements.txt
